[package]
name = "teztap"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
openssl = "0.10.63"
hex = "0.4.3"
open = "5.0.1"
indicatif = "0.17.8"
clap = { version = "4.5.1", features = ["derive"] }
